--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,8 @@ li {
 #header .header-container {
   background: #fff;
   border-radius: 40px;
+  border: 2px solid;
+  border-color: black;
 }
 
 #header.header-scrolled {
@@ -108,7 +110,7 @@ li {
   background: #006565;
   border-radius: 40px;
   border: 2px solid;
-  border-color: #111;
+  border-color: #ffffff;
 }
 
 #header .logo h1 {
@@ -403,6 +405,8 @@ li {
   background: url("../public/assets/img/hero-bg.jpg") center center;
   background-size: cover;
   position: relative;
+  border: 5px solid;
+  border-color: black;
 }
 
 #hero .container {
@@ -567,6 +571,8 @@ section {
   background: #006565;
   border-radius: 4px;
   color: #fff;
+  border: 2px solid;
+  border-color: black;
 }
 
 .why-us .content h3 {
@@ -605,6 +611,8 @@ section {
   padding: 40px 30px;
   width: 100%;
   transition: 0.3s;
+  border: 2px solid;
+  border-color: black;
 }
 
 .why-us .icon-boxes .icon-box i {
@@ -637,6 +645,8 @@ section {
   background-size: cover;
   padding: 60px 0;
   margin-top: 60px;
+  border: 5px solid;
+  border-color: black;
 }
 
 .cta h3 {
@@ -670,16 +680,23 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Services
+# Post Code
 --------------------------------------------------------------*/
-.services .icon-box {
+
+#post-code .container {
+  min-height: 100vh !important;
+}
+
+.post-code .icon-box {
   text-align: center;
   padding: 40px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
+  border: 2px solid;
+  border-color: black;
 }
 
-.services .icon-box .icon {
+.post-code .icon-box .icon {
   margin: 0 auto;
   width: 64px;
   height: 64px;
@@ -693,37 +710,100 @@ section {
   color: #006565;
 }
 
-.services .icon-box .icon i {
+.post-code .icon-box .icon i {
   font-size: 28px;
 }
 
-.services .icon-box h4 {
+.post-code .icon-box h4 {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 24px;
 }
 
-.services .icon-box h4 a {
+.post-code .icon-box h4 a {
   color: #36343a;
   transition: ease-in-out 0.3s;
 }
 
-.services .icon-box p {
+.post-code .icon-box p {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
 }
 
-.services .icon-box:hover {
-  border-color: #fff;
+.post-code .icon-box:hover {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+  border: 2px solid;
+  border-color: #006565;
 }
 
-.services .icon-box:hover h4 a {
+.post-code .icon-box:hover h4 a {
   color: #006565;
 }
 
-.services .icon-box:hover .icon {
+.post-code .icon-box:hover .icon {
+  color: #fff;
+  background: #006565;
+}
+
+/*--------------------------------------------------------------
+# Code Repository
+--------------------------------------------------------------*/
+.code-repo .icon-box {
+  text-align: center;
+  padding: 40px 20px;
+  transition: all ease-in-out 0.3s;
+  background: #fff;
+  border: 2px solid;
+  border-color: black;
+}
+
+.code-repo .icon-box .icon {
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+  border-radius: 50px;
+  border: 1px solid #006565;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  transition: ease-in-out 0.3s;
+  color: #006565;
+}
+
+.code-repo .icon-box .icon i {
+  font-size: 28px;
+}
+
+.code-repo .icon-box h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.code-repo .icon-box h4 a {
+  color: #36343a;
+  transition: ease-in-out 0.3s;
+}
+
+.code-repo .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.code-repo .icon-box:hover {
+  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+  border: 2px solid;
+  border-color: #006565;
+}
+
+.code-repo .icon-box:hover h4 a {
+  color: #006565;
+}
+
+.code-repo .icon-box:hover .icon {
   color: #fff;
   background: #006565;
 }
