--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-body {
+body,
+label {
   font-family: "Rubik Doodle Shadow", system-ui;
   color: #444444;
+  font-size: 25px;
 }
 
 a {
@@ -52,8 +54,7 @@ h6 {
 }
 
 p,
-li,
-label {
+li {
   font-family: "Playpen Sans", cursive;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -685,7 +686,8 @@ section {
 }
 
 .post-code .icon-box:hover {
-  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 25px rgba(2, 86, 64, 0.826);
+  transform: translateY(-5px);
   border: 2px solid;
   border-color: #006565;
 }
