--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ label {
   font-size: 25px;
 }
 
+body {
+  -webkit-user-select: none; /* Chrome, Safari, Opera */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Standard syntax */
+}
+
 a {
   color: #006565;
   text-decoration: none !important;
